--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
-asn1crypto==1.4.0
-certifi==2022.5.18.1
-cffi==1.15.0
-commonmark==0.9.1
-cryptography==37.0.2
-decorator==5.1.1
-idna==3.3
-pycparser==2.21
-Pygments==2.12.0
-pyOpenSSL==22.0.0
-rich==12.4.4
-six==1.16.0
-validators==0.20.0
-py==1.11.0
-retry==0.9.2
+certifi>=2022.5.18.1
+cryptography>=37.0.2
+decorator>=5.1.1
+idna>=3.3
+pycparser>=2.21
+Pygments>=2.12.0
+pyOpenSSL>=22.0.0
+rich>=12.4.4
+validators>=0.20.0
+retry>=0.9.2
